# AntiAliasing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aa.asv  aa.m
resources/shaders/: fragment_blend_smaa.glsl  fragment_default.glsl  fragment_edge_smaa.glsl  fragment_fxaa.glsl  fragment_fxaa_iterative.glsl  fragment_neighborhood_smaa.glsl  vertex_blend_smaa.glsl  vertex_default.glsl  vertex_edge_smaa.glsl  vertex_fullscreen_quad.glsl  vertex_fxaa.glsl  vertex_neighborhood_smaa.glsl
src/: appstate.h  dartboard.c  dartboard.h  lifecycle.c  lifecycle.h  main.c  smaa_helper.c  smaa_helper.h  ui_manual.c  ui_manual.h
src/gl/: error.c  error.h  frame_buffer.c  frame_buffer.h  program.c  program.h  query.c  query.h  shaders.c  shaders.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
